# predit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/cli/: main.py
app/config/: config_reader.py  create_config.py
app/core/: derush.py  editor.py  ffmpeg.py  logger.py  merger.py  project_writter.py  speechToText.py
app/core/sequences/: __init__.py  mascot.py  memes.py  sequence.py
app/gateway/: llm_gateway.py
app/rest_client/: ollama.py
app/utils/: argumentUtil.py  list_util.py  media_files_util.py  path_util.py  timestamps_util.py  verificationUtil.py
