[project]
name = "predit"
version = "0.1.0"
description = "Pre-edit a video using an avatar and memes saving into a xml file usable in kdenlive and some other edit-software."
authors = [
    {name = "Nathan Millot", email = "nathanmillot@icloud.com"}
]
dependencies = [
    "silero-vad==6.2.0",
    "torchcodec==0.11.1",
    "moviepy==2.2.1",
    "PyYAML~=6.0.3",
    "ollama>=0.6.1",
    "opentimelineio==0.18.1",
    "OpenTimelineIO-Plugins==0.18.1",
    "faster-whisper==1.2.1",
    ]

[project.scripts]
predit  = "app.cli.main:main"